GenericSetup Product Changelog
==============================

GenericSetup 1.4.3 (unreleased)
-------------------------------

- Don't fail when a sub-item cannot be adapted after creation when
  importing a folder.  (https://bugs.launchpad.net/zope-cmf/+bug/300315)

- Avoid even an explicit purge of the rolemap if no XML file is present
  in a given context.  (https://bugs.launchpad.net/zope-cmf/+bug/279294)

- Changed upgrade logic to set the current version after an upgrade to the
  of the last step, instead of the current profile version.

GenericSetup 1.4.2.2 (2008-09-22)
---------------------------------

- Packaging update:  version of 1.4.2.1 said '1.4.2'.

GenericSetup 1.4.2.1 (2008-09-22)
---------------------------------

- Packaging update:  version of 1.4.2 said '1.4.2dev'.

GenericSetup 1.4.2 (2008-09-22)
-------------------------------

- Add 'IChunkedImportContext' interface, allowing RAM-efficient chunked
  reads of large files, and implement for 'DirectoryImportContext'.
  (https://bugs.launchpad.net/zope-cmf/+bug/259233)

- Add 'IChunkedExportContext' interface, allowing RAM-efficient chunked
  writes of large files, and implement for 'DirectoryExportContext'.
  (https://bugs.launchpad.net/zope-cmf/+bug/257365)

- Update local component registry importer to prevent it from overwriting
  existing utilities if they are already of the correct type

- Property import/export tests: Fix and test for non-ASCII properties.
  (https://bugs.launchpad.net/zope-cmf/+bug/202356)
  (https://bugs.launchpad.net/zope-cmf/+bug/242588)

- Provide default for dependencies when processing metadata.xml, to
  avoid a KeyError.
  (https://bugs.launchpad.net/zope-cmf/+bug/255301)

- Update PropertyManagerHelpers to make it possible to remove elements from a
  property by adding a remove="True" attribute to the element. This can
  also be used to reorder elements since new elements are always added
  at the end of the list.


GenericSetup 1.4.1 (2008-05-27)